minified image and change css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!--  App Description  -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css"/>
@@ -253,8 +253,8 @@
 	<section class="sub_box">
 		<p class="cta_text animated wow fadeInDown">We're hiring. Join Our company!</p>
 		<form action="#" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
-			<input type="email" id="mc-email" placeholder="Enter your email"/>
-			<button type="submit" id="mc_submit">
+			<input#email type="email" id="mc-email" placeholder="Enter your email"/>
+			<button#submit type="submit" id="mc_submit">
 				<i class="icon"></i>
 			</button>
 		</form>
