update index html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
 
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/ajaxchimp.js"></script>
+	<script async type="text/javascript" src="js/parallax.js"></script>
+
 </head>
 <body>
 
@@ -57,12 +61,12 @@
 				<h1 class="text-uppercase  animated wow fadeInLeft">Creators of Robofriends and SmartBrain</h1>
 				<p class="enhance text-lowercase  animated wow fadeInLeft">Developers of the future, building for today</p>
 
-				<a href="https://github.com/aneagoie/robofriends" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="https://github.com/aneagoie/robofriends" class="app_store_btn text-uppercase animated wow fadeInLeft"> link1
 					<i class="android_icon"></i>
 					<span>Robofriends</span>
 				</a>
 
-				<a href="https://github.com/aneagoie/smart-brain" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="https://github.com/aneagoie/smart-brain" class="app_store_btn text-uppercase animated wow fadeInLeft">link2
 					<i class="iphone_icon"></i>
 					<span>SmartBrain</span>
 				</a>
@@ -133,7 +137,7 @@
 							</li>
 						</ul>
 
-						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="https://www.youtube.com/watch?v=sCX_YMPuJGA?autoplay=1&showinfo=0">
+						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="https://www.youtube.com/watch?v=sCX_YMPuJGA?autoplay=1&showinfo=0">link3
 							<i class="play_icon"></i>
 							<span>About Video</span>
 						</a>
@@ -144,7 +148,7 @@
 		</div>
 
 		<div class="about_video show_video">
-			<a href="" class="close_video"></a>
+			<a href="" class="close_video">link4</a>
 		</div>
 	</section>
 	<!--  End About Section  -->
@@ -272,25 +276,22 @@
 	<footer>
 		<ul class="list-unstyled list-inline app_platform">
 			<li class="animated wow fadeInDown" data-wow-delay="0s">
-				<a href=""><img src="img/android_icon.png" alt="" title=""></a>
+				<a href=""><img src="img/android_icon.png" alt="" title="">link5</a>
 			</li>
 			<li class="animated wow fadeInDown" data-wow-delay=".1s">
-				<a href=""><img src="img/ios_icon.png" alt="" title=""></a>
+				<a href=""><img src="img/ios_icon.png" alt="" title="">link6</a>
 			</li>
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
-				<a href=""><img src="img/windows_icon.png" alt="" title=""></a>
+				<a href=""><img src="img/windows_icon.png" alt="" title="">link7</a>
 			</li>
 		</ul>
 		<p class="copyright animated wow fadeIn" data-wow-duration="2s"> <strong>Pixelhint</strong>
 	</footer>
 	<!--  End Footer Section  -->
 
-	<script defer type="text/javascript" src="js/jquery.js"></script>
-	<script async type="text/javascript" src="js/ajaxchimp.js"></script>
 
 	<script defer type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<script defer type="text/javascript" src="js/wow.js"></script>
-	<script async type="text/javascript" src="js/parallax.js"></script>
 	<script defer type="text/javascript" src="js/nicescroll.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script async type="text/javascript" src="js/scrollTo.js"></script>
